plugins {
  id 'org.jetbrains.kotlin.jvm'
  id 'maven-publish'
  id 'jacoco-report-aggregation'
}

repositories {
  mavenCentral()
}

configurations {
  ktlint
}

dependencies {
  testImplementation 'org.jetbrains.kotlin:kotlin-test'
  testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
  ktlint("com.pinterest:ktlint:0.49.1") {
    attributes {
      attribute(Bundling.BUNDLING_ATTRIBUTE, getObjects().named(Bundling, Bundling.EXTERNAL))
    }
  }
}

tasks.register("ktlintCheck", JavaExec) {
  group = "verification"
  description = "Check Kotlin code style."
  classpath = configurations.ktlint
  mainClass = "com.pinterest.ktlint.Main"
  args "src/**/*.kt", "**.kts", "!**/build/**"
}

tasks.named("check") {
  dependsOn tasks.named("ktlintCheck")
}

tasks.register("ktlintFormat", JavaExec) {
  group = "formatting"
  description = "Fix Kotlin code style deviations."
  classpath = configurations.ktlint
  mainClass = "com.pinterest.ktlint.Main"
  jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
  args "-F", "src/**/*.kt", "**.kts", "!**/build/**"
}

task installGitHooks(type: Copy) {
  from new File(rootProject.rootDir, '/hooks')
  into { new File(rootProject.rootDir, '/.git/hooks') }
  fileMode 0775
}

tasks.build {
  dependsOn installGitHooks
}

tasks.named('test') {
  useJUnitPlatform()
  finalizedBy(tasks.jacocoTestReport)
}

kotlin {
  jvmToolchain(21)
}

publishing {
  repositories {
    maven {
      name = "GitHubPackages"
      url = uri("https://maven.pkg.github.com/brarios/printscript")
      credentials {
        username = System.getenv("GITHUB_ACTOR")
        password = System.getenv("GITHUB_TOKEN")
      }
    }
  }
  publications {
    gpr(MavenPublication) {
      from(components.java)
    }
  }
}

